# master-land-matrix

./: .dockerignore  .gitignore  DOCKER.md  DONTBREAK.md  Diagramme sans nom.drawio  Dockerfile  README.md  charte_graphique.docx  check_columns.py  crawler.py  docker-compose.yml  fonction_requete.py  html.md  index.html  land_matrix_function.py  package-lock.json  pilliers _and_matrix.drawio
R_script/: .gitignore  A4F_final_version.qmd
crawler/: crawler.py  crawler_area.py  crawler_main.py  crawler_points.py
django_proxy/: Dockerfile  README.md  entrypoint.sh  land_matrix_function.py  manage.py  pyproject.toml  requirements.txt
django_proxy/api/: serializers.py  urls.py  views.py
django_proxy/api/custom_service/: pdf_report.py  spatial_function.py  table_function.py
django_proxy/api/management/commands/: crawler_area.py  crawler_main.py  crawler_points.py  generic_function.py
django_proxy/api/spatial_service/: spatial_function.py
django_proxy/data/: areas.gpkg  deals.gpkg  polygone_test.geojson  projects.gpkg  projet_imaginaire.geojson  region_monde_light.gpkg  region_perou.geojson  world_region_light.gpkg
django_proxy/data/reports/: report_2026_02_17_17_34_35.json
django_proxy/management/commands/: crawler_area.py  crawler_main.py  crawler_points.py  generic_function.py
django_proxy/proxy_project/: asgi.py  settings.py  urls.py  wsgi.py
drawing_widget/: index.css  index.html  main.js  maps.html  style.css
drawing_widget_nodejs/: index.css  index.html  package-lock.json  package.json  readme.md
scripts/: api.js  main.js
styles/: style.css
(+117 files in other folders)
