[project]
name = "deal-export-api"
version = "0.1.0"
description = "Land Matrix Geodata Visualiser API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2,<6.0",
    "django-cors-headers>=4.9.0",
    "requests>=2.32.5",
    "geopandas>=0.15.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.2",
    "numpy>=2.3.5",
    "djangorestframework>=3.15.1",
    "drf-spectacular>=0.29.0",
    "reportlab>=4.2.0",
    "djangorestframework-gis>=1.2.0",
]

[dependency-groups]

dev = [
    "pytest>=8.0.0",
]